# pbr

./: README.md  tutorial.thrift
cpp/: CMakeCache.txt  CMakeLists.txt  CppClient.cpp  CppServer.cpp  Makefile  TutorialClient  TutorialServer  cmake_install.cmake  ！
cpp/alg/: CMakeLists.txt  Readme.md
cpp/alg/include/: common.h  drawbook.h
cpp/alg/lib/: libsn_drawbook.so.1
cpp/alg/lib.new.gpu/: libsn_drawbook.so.1.1.0
cpp/alg/lib.new.gpu.3/: libsn_drawbook.so.1.1.0
cpp/alg/lib.old/: libsn_drawbook.so.1.1.0
cpp/alg/samples/: CMakeLists.txt  dbr_create_hander.cpp  dbr_feas_service.cpp  dbr_recoall_server.cpp  dbr_recogition_server.cpp  drawbook_recognition.cpp  gallery.txt  ！
cpp/gen-cpp/: Calculator.h
cpp/lib/thrift/: config.h
cpp/lib/thrift/.deps/: TApplicationException.Plo  TOutput.Plo  VirtualProfiling.Plo
cpp/lib/thrift/async/.deps/: TAsyncChannel.Plo  TConcurrentClientSyncInfo.Plo  libthriftnb_la-TAsyncProtocolProcessor.Plo  libthriftnb_la-TEvhttpClientChannel.Plo  libthriftnb_la-TEvhttpServer.Plo
cpp/lib/thrift/concurrency/.deps/: Monitor.Plo  Mutex.Plo  PosixThreadFactory.Plo  ThreadManager.Plo  TimerManager.Plo  Util.Plo
cpp/lib/thrift/processor/.deps/: PeekProcessor.Plo
cpp/lib/thrift/protocol/.deps/: TBase64Utils.Plo  TDebugProtocol.Plo  TJSONProtocol.Plo  TMultiplexedProtocol.Plo  TProtocol.Plo  libthriftz_la-THeaderProtocol.Plo
cpp/lib/thrift/server/.deps/: TConnectedClient.Plo  TServerFramework.Plo  TSimpleServer.Plo  TThreadPoolServer.Plo  TThreadedServer.Plo  libthriftnb_la-TNonblockingServer.Plo
cpp/lib/thrift/transport/.deps/: TBufferTransports.Plo  TFDTransport.Plo  TFileTransport.Plo  THttpClient.Plo  THttpServer.Plo  THttpTransport.Plo  TPipe.Plo  TPipeServer.Plo  TSSLServerSocket.Plo  TSSLSocket.Plo  TServerSocket.Plo  TSimpleFileTransport.Plo  TSocket.Plo  TSocketPool.Plo  TTransportException.Plo  TTransportUtils.Plo  libthriftz_la-THeaderTransport.Plo  libthriftz_la-TZlibTransport.Plo
cpp/utils/: base64.h
gen-cpp/: Calculator.cpp  Calculator_server.skeleton.cpp
