find_package(OpenCV REQUIRED)
FILE(GLOB_RECURSE srcs ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FOREACH(source ${srcs})
    GET_FILENAME_COMPONENT(name ${source} NAME_WE)
    SET(name test_${name}.bin)
    ADD_EXECUTABLE(${name} ${source})
    TARGET_LINK_LIBRARIES(${name} sn_drawbook ${OpenCV_LIBS})
    INSTALL(TARGETS ${name} DESTINATION bin)
ENDFOREACH()
install(DIRECTORY images DESTINATION bin)
